test/incremental/aarch64-macos/hello_world_with_updates.1.zig
pub export fn main() noreturn {}

// error
//
// :1:32: error: expected noreturn, found void
